fix: footer is too tall

--- a/style.css
+++ b/style.css
@@ -141,14 +141,18 @@ body {
 }
 
 .footer {
-    /* border: 2px solid black; */
-    background-color: gray;
+    background-color: black;
     grid-column: 1 / 3;
     grid-row: 3;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    max-height: 65px;
+}
+
+.footer p {
+    color: white;
 }
 
 li {
